--- a/capstone-design/JSP/manager/m_productOrder.html
+++ b/capstone-design/JSP/manager/m_productOrder.html
@@ -2,53 +2,53 @@
 <html>
 <head>
 <meta charset="euc-kr">
-<title>ê´€ë¦¬ìž íŽ˜ì´ì§€</title> 
+<title>°ü¸®ÀÚ ÆäÀÌÁö</title> 
 
 <link rel="stylesheet" href="../../css/manager.css">	
 	
-<!-- ê´€ë¦¬ìž íŽ˜ì´ì§€ í”„ë ˆìž„ ì•ˆì— ë“¤ì–´ê°ˆ ë‚´ìš©. ë¦¬ë·° ê´€ë¦¬ ìƒì„¸ ì¡°íšŒ. -->
+<!-- °ü¸®ÀÚ ÆäÀÌÁö ÇÁ·¹ÀÓ ¾È¿¡ µé¾î°¥ ³»¿ë. ¸®ºä °ü¸® »ó¼¼ Á¶È¸. -->
 </head>
 
 <body>
 		<section class="review" id="review">
-			<h2>ë¦¬ë·° ê´€ë¦¬</h2>
-			<h3>ë¦¬ë·° ê´€ë¦¬ ìƒì„¸ ì¡°íšŒ</h3>
+			<h2>¸®ºä °ü¸®</h2>
+			<h3>¸®ºä °ü¸® »ó¼¼ Á¶È¸</h3>
 			<table>
 				<tr>
-					<th width="20%">ìž‘ì„±ì¼</th>
-					<td>2024. 3. 16. ì˜¤ì „ 5:55:36</td>
+					<th width="20%">ÀÛ¼ºÀÏ</th>
+					<td>2024. 3. 16. ¿ÀÀü 5:55:36</td>
 				</tr>
 				<tr>
-					<th>íšŒì›ëª…</th>
-					<td>ê¹€ì§€ì€</td>
+					<th>È¸¿ø¸í</th>
+					<td>±èÁöÀº</td>
 				</tr>
 				<tr>
-					<th>ë‚´ ì»¤ìŠ¤í…€ ì´ë¦„</th>
-					<td>í‡´ê·¼ í›„ í•œìž”</td>
+					<th>³» Ä¿½ºÅÒ ÀÌ¸§</th>
+					<td>Åð±Ù ÈÄ ÇÑÀÜ</td>
 				</tr>
 				<tr>
-					<th>ë² ì´ìŠ¤ ì›ë‘</th>
-					<td>íƒ„ìžë‹ˆì•„ AA</td>
+					<th>º£ÀÌ½º ¿øµÎ</th>
+					<td>ÅºÀÚ´Ï¾Æ AA</td>
 				</tr>
 				<tr>
-					<th>ë¸”ë Œë“œ ì›ë‘</th>
-					<td>ìžë©”ì´ì¹´ ë¸”ë£¨ë§ˆìš´í‹´, ì½”ìŠ¤íƒ€ë¦¬ì¹´ ë”°ë¼ì£¼, ì˜ˆë©˜ ëª¨ì¹´ ë§ˆíƒ€ë¦¬</td>
+					<th>ºí·»µå ¿øµÎ</th>
+					<td>ÀÚ¸ÞÀÌÄ« ºí·ç¸¶¿îÆ¾, ÄÚ½ºÅ¸¸®Ä« µû¶óÁÖ, ¿¹¸à ¸ðÄ« ¸¶Å¸¸®</td>
 				</tr>
 				<tr>
-					<th>ë¡œìŠ¤íŒ… ë‹¨ê³„</th>
-					<td>5ë‹¨ê³„</td>
+					<th>·Î½ºÆÃ ´Ü°è</th>
+					<td>5´Ü°è</td>
 				</tr>
 				<tr>
-					<th>ë¦¬ë·° ì œëª©</th>
-					<td>íƒ„ìžë‹ˆì•„ AA ë§›ìžˆì–´ìš”</td>
+					<th>¸®ºä Á¦¸ñ</th>
+					<td>ÅºÀÚ´Ï¾Æ AA ¸ÀÀÖ¾î¿ä</td>
 				</tr>
 				<tr>
-					<th>ë¦¬ë·° ë‚´ìš©</th>
-					<td>ì»¤í”¼ë¥¼ ë§ˆì‹œë©° ì—¬í–‰ì„ ë– ë‚˜ëŠ” ê¸°ë¶„ì´ì—ˆì–´ìš”. ë‹¤ì–‘í•œ ì›ë‘ë¥¼ ë§›ë³´ë©´ì„œ ì»¤í”¼ì˜ ë§¤ë ¥ì— ë¹ ì ¸ë“¤ì—ˆì–´ìš”.</td>
+					<th>¸®ºä ³»¿ë</th>
+					<td>Ä¿ÇÇ¸¦ ¸¶½Ã¸ç ¿©ÇàÀ» ¶°³ª´Â ±âºÐÀÌ¾ú¾î¿ä. ´Ù¾çÇÑ ¿øµÎ¸¦ ¸Àº¸¸é¼­ Ä¿ÇÇÀÇ ¸Å·Â¿¡ ºüÁ®µé¾ú¾î¿ä.</td>
 				</tr>
 			</table>
-			<a href="./m_main.html"><div class="btn_back">ë’¤ë¡œê°€ê¸°</div></a>
-			<a href=""><div class="btn_delete">ë¦¬ë·° ì‚­ì œ</div></a>
+			<a href="./m_main.html"><div class="btn_back">µÚ·Î°¡±â</div></a>
+			<a href=""><div class="btn_delete">¸®ºä »èÁ¦</div></a>
 			
 		</section>
 </body>
